release v6.1.6
